[package]
name = "prom-types"
version = "0.1.0"
edition = "2021"
authors = ["Huo Linhe <linhehuo@gmail.com>"]
description = """
Protobuf Types for Prometheus Remote Read/Write, from TAOS Data Inc. - the creator of TDengine.
"""
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7"
serde = {version = "1.0", features = ["derive"]}
